<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JavaSherlocked</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter">Enter</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_options">Options</string>
    <string name="tests">Tests</string>
    <string name="srij">SRIJ</string>
    <string name="contribute">Contribute</string>
    <string name="practice">Practice</string>
    <string name="title_activity_practice">Practice</string>
    <string name="title_activity_tests">Tests</string>
    <string name="title_activity_srij">SRIJ</string>
    <string name="title_activity_contribute">Contribute</string>
    <string name="shoot_to_start">Shoot to Start</string>
    <string name="explain">Explain</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="share">Share Using</string>

</resources>
