<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Options" 
    android:background="@drawable/main_bg">

    <Button
        android:id="@+id/bTests"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@android:color/transparent"
        android:layout_alignLeft="@+id/bPractice"
        android:layout_below="@+id/bPractice"
        android:onClick="Tests"
        android:text="@string/tests" />

    <Button
        android:id="@+id/bSRIJ"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@android:color/transparent"
        android:layout_alignRight="@+id/bTests"
        android:layout_below="@+id/bTests"
        android:onClick="SRIJ"
        android:text="@string/srij" />

    <Button
        android:id="@+id/bContribute"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@android:color/transparent"
        android:layout_alignRight="@+id/bSRIJ"
        android:layout_below="@+id/bSRIJ"
        android:onClick="Contribute"
        android:text="@string/contribute" />

    <Button
        android:id="@+id/bPractice"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@android:color/transparent"
        android:text="@string/practice"
        android:textColor="@android:color/white"
        android:onClick="Practice"
        android:textSize="20sp" />

</RelativeLayout>
