<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:fillViewport="true"
    tools:context=".Practice" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
       
        android:layout_marginTop="10dp"
        android:background="@drawable/main_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvQuestionNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tvQuestionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
            android:gravity="clip_horizontal"
            android:minHeight="150dp"
            android:text="@string/hello_world"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvOptionA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hello_world"
                android:textAlignment="viewStart"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvOptionB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingLeft="8dp"
                android:text="@string/hello_world"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvOptionC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hello_world"
                android:textAlignment="viewStart"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvOptionD"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:gravity="start"
                android:text="@string/hello_world"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/bPrev"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/previous"
                android:src="@android:drawable/ic_media_previous" />

            <Button
                android:id="@+id/bExplain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:padding="10dp"
                android:text="@string/explain"
                android:textColor="@android:color/white" />

            <ImageButton
                android:id="@+id/bNext"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/next"
                android:src="@android:drawable/ic_media_next" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>